--- a/templates/latex/index.tex.j2
+++ b/templates/latex/index.tex.j2
@@ -24,11 +24,10 @@
 
 ((*- if nb.metadata["latex_metadata"]: -*))
 ((*- if nb.metadata["latex_metadata"]["author"]: -*))
-((*- if nb.metadata["latex_metadata"]["email"]: -*))
-    ((*- set nb_email = nb.metadata["latex_metadata"]["email"] -*))
-    \author{((( nb.metadata["latex_metadata"]["author"] ))) (\href{mailto:((( nb_email )))}{((( nb_email )))})}
+    \author{((( nb.metadata["latex_metadata"]["author"] )))}
 ((*- endif *))
-((*- endif *))
+((*- else -*))
+    \author{Björn Kasper}
 ((*- endif *))
 
 ((=-
@@ -43,6 +42,8 @@
 ((*- if nb.metadata["latex_metadata"]["title"]: -*))
     \title{\textbf{\textsf{((( nb.metadata["latex_metadata"]["title"] )))}}}
 ((*- endif *))
+((*- else -*))
+    \title{((( resources.metadata.name )))}
 ((*- endif *))
 
 ((* endblock title *))
@@ -133,6 +134,84 @@
     ((* endblock tableofcontents *))
 
 ((* endblock predoc *))
+
+% New mechanism for rendering figures with captions
+((*- block data_png -*))
+((*- if cell.metadata.widefigure: -*))
+    ((( draw_widefigure_with_caption(output.metadata.filenames['image/png'], cell.metadata.caption, cell.metadata.label) )))
+((*- else -*))
+    ((*- if cell.metadata.caption: -*))
+        ((*- if cell.metadata.label: -*))
+            ((( draw_figure_with_caption(output.metadata.filenames['image/png'], cell.metadata.caption, cell.metadata.label) )))
+        ((*- else -*))
+            ((( draw_figure_with_caption(output.metadata.filenames['image/png'], cell.metadata.caption, "") )))
+        ((*- endif *))
+    ((*- else -*))
+        ((( draw_figure_with_caption(output.metadata.filenames['image/png'], "") )))
+    ((*- endif *))
+((*- endif *))
+((*- endblock -*))
+((*- block data_jpg -*))
+((*- if cell.metadata.caption: -*))
+    ((*- if cell.metadata.label: -*))
+        ((( draw_figure_with_caption(output.metadata.filenames['image/jpeg'], cell.metadata.caption, cell.metadata.label) )))
+    ((*- else -*))
+        ((( draw_figure_with_caption(output.metadata.filenames['image/jpeg'], cell.metadata.caption, "") )))
+    ((*- endif *))
+((*- else -*))
+    ((( draw_figure_with_caption(output.metadata.filenames['image/jpeg'], "") )))
+((*- endif *))
+((*- endblock -*))
+((*- block data_svg -*))
+((*- if cell.metadata.caption: -*))
+    ((*- if cell.metadata.label: -*))
+        ((( draw_figure_with_caption(output.metadata.filenames['image/svg+xml'], cell.metadata.caption, cell.metadata.label) )))
+    ((*- else -*))
+        ((( draw_figure_with_caption(output.metadata.filenames['image/svg+xml'], cell.metadata.caption, "") )))
+    ((*- endif *))
+((*- else -*))
+    ((( draw_figure_with_caption(output.metadata.filenames['image/svg+xml'], "") )))
+((*- endif *))
+((*- endblock -*))
+((*- block data_pdf -*))
+((*- if cell.metadata.widefigure: -*))
+    ((( draw_widefigure_with_caption(output.metadata.filenames['application/pdf'], cell.metadata.caption, cell.metadata.label) )))
+((*- else -*))
+    ((*- if cell.metadata.caption: -*))
+        ((*- if cell.metadata.label: -*))
+            ((( draw_figure_with_caption(output.metadata.filenames['application/pdf'], cell.metadata.caption, cell.metadata.label) )))
+        ((*- else -*))
+            ((( draw_figure_with_caption(output.metadata.filenames['application/pdf'], cell.metadata.caption, "") )))
+        ((*- endif *))
+    ((*- else -*))
+        ((( draw_figure_with_caption(output.metadata.filenames['application/pdf'], "") )))
+    ((*- endif *))
+((*- endif *))
+((*- endblock -*))
+
+% Draw a figure using the graphicx package.
+((* macro draw_figure_with_caption(filename, caption, label) -*))
+((* set filename = filename | posix_path *))
+((*- block figure scoped -*))
+    \begin{figure}[h!]
+        \begin{center}\adjustimage{max size={0.9\linewidth}{0.4\paperheight}}{((( filename )))}\end{center}
+        \caption{((( caption )))}
+        \label{((( label )))}
+    \end{figure}
+((*- endblock figure -*))
+((*- endmacro *))
+
+% Draw a figure using the graphicx package.
+((* macro draw_widefigure_with_caption(filename, caption, label) -*))
+((* set filename = filename | posix_path *))
+((*- block figure_wide scoped -*))
+    \begin{figure}[h!]
+        \begin{center}\adjustimage{max size={0.9\linewidth}{0.4\paperheight}}{((( filename )))}\end{center}
+        \caption{((( caption )))}
+        \label{((( label )))}
+    \end{figure}
+((*- endblock figure_wide -*))
+((*- endmacro *))
 
 ((*- block docclass -*))
 \documentclass [oneside,10pt,a4paper,ngerman,BCOR10mm,headsepline,parindent,final]{scrartcl}
