changes sizes of included figures in 'SVM_Iris_parameter_tuning.ipynb'

--- a/templates/latex/index.tex.j2
+++ b/templates/latex/index.tex.j2
@@ -200,7 +200,7 @@
 ((* set filename = filename | posix_path *))
 ((*- block figure scoped -*))
     \begin{figure}[h!]
-        \begin{center}\adjustimage{max size={0.9\linewidth}{0.4\paperheight}}{((( filename )))}\end{center}
+        \begin{center}\includegraphics[scale=0.6]{((( filename )))}\end{center}
         \caption{((( caption )))}
         \label{((( label )))}
     \end{figure}
@@ -222,3 +222,27 @@
 ((*- block docclass -*))
 \documentclass [oneside,10pt,a4paper,ngerman,BCOR10mm,headsepline,parindent,final]{scrartcl}
 ((*- endblock docclass -*))
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
