--- a/templates/latex/base_bk.tex.j2
+++ b/templates/latex/base_bk.tex.j2
@@ -45,12 +45,7 @@ override this.-=))
     \usepackage{iftex}
     \ifPDFTeX
         \usepackage[T1]{fontenc}
-        \IfFileExists{alphabeta.sty}{
-              \usepackage{alphabeta}
-          }{
-              \usepackage[mathletters]{ucs}
-              \usepackage[utf8x]{inputenc}
-          }
+        \usepackage[utf8]{inputenc}
     \else
         \usepackage{fontspec}
         \usepackage{unicode-math}
