--- a/templates/latex/index.tex.j2
+++ b/templates/latex/index.tex.j2
@@ -178,7 +178,7 @@
     \printbibheading[heading=bibnumbered]
     \printbibliography[heading=subbibliography,keyword={URL},title={Online references}]
     \printbibliography[heading=subbibliography,keyword={book},title={Books, technical reports and others}]
-    %\printbibliography[heading=subbibliography,nottype=online,title={All my non-online references}]
+    %\printbibliography[heading=subbibliography,title={Others}]
     ((* endblock bibliography *))
 ((* endblock postdoc *))
 
@@ -244,7 +244,7 @@
 ((* macro draw_figure_with_caption(filename, caption, label) -*))
 ((* set filename = filename | posix_path *))
 ((*- block figure scoped -*))
-    \begin{figure}[!ht]
+    \begin{figure}
         \begin{center}\includegraphics[scale=0.6]{((( filename )))}\end{center}
         \caption{((( caption )))}
         \label{((( label )))}
@@ -256,7 +256,7 @@
 ((* macro draw_widefigure_with_caption(filename, caption, label) -*))
 ((* set filename = filename | posix_path *))
 ((*- block figure_wide scoped -*))
-    \begin{figure}[!ht]
+    \begin{figure}
         \begin{center}\adjustimage{max size={0.9\linewidth}{0.4\paperheight}}{((( filename )))}\end{center}
         \caption{((( caption )))}
         \label{((( label )))}
