added the package 'lmodern' to the LaTeX template so that 'pdflatex' also uses the better Type 1 fonts

--- a/templates/latex/base_bk.tex.j2
+++ b/templates/latex/base_bk.tex.j2
@@ -44,8 +44,11 @@ override this.-=))
 
     \usepackage{iftex}
     \ifPDFTeX
-        \usepackage[T1]{fontenc}
         \usepackage[utf8]{inputenc}
+        \usepackage[T1]{fontenc}
+        % Without the 'lmodern' package, 'pdflatex' substitutes the Type 1 fonts 
+        % against the bitmap based Type 3 fonts and you get a very pixelated typeface.
+        \usepackage{lmodern}
     \else
         \usepackage{fontspec}
         \usepackage{unicode-math}
